--- a/templates/login.html
+++ b/templates/login.html
@@ -1,52 +1,62 @@
+{% extends "base.html" %}
 {% load url from future %}
-<!DOCTYPE HTML>
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="{% static "styles.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "others.css" %}">
-        <script src="{% static "html5aux.js" %}"></script>
 
-    </head>
-    <body>
-        <div class="pie" align='center' align=>
-            <img src="{% static "apache-icon.png" %}" width="100px" align="absmiddle">
-            <img src="{% static "djangologo.png" %}" width="100px" align="absmiddle">
-            <span style='margin:20px;'>by marcelo.martinovic@gmail.com</span>
-            <img src="{% static "Raspi_Colour_R.png" %}" height="50px" align="absmiddle">
-            <img src="{% static "HTML5_Logo_256.png" %}" height="50px" align="absmiddle">
+
+{% block titulo %} Login {% endblock %}
+
+
+{% block datos %}
+    <!--<div class="pie">
+        <img src="{% static "apache-icon.png" %}" width="100px" align="absmiddle">
+        <img src="{% static "djangologo.png" %}" width="100px" align="absmiddle">
+        <span style='margin:20px;'>by marcelo.martinovic@gmail.com</span>
+        <img src="{% static "Raspi_Colour_R.png" %}" height="50px" align="absmiddle">
+        <img src="{% static "HTML5_Logo_256.png" %}" height="50px" align="absmiddle">
+    </div>
+    <div>
+        <div class="imagenDiv">
+            <img src="{% static "pantalla_login.png" %}"
+            width='550px' align="absmiddle">
         </div>
-        <div>
-            <div class="imagenDiv">
-                <img src="{% static "pantalla_login.png" %}" 
-                width='550px' align="absmiddle">
+        <div class="login" align="left">
+            <div style='margin: 10px;'>
+                <img src="{% static "login.png" %}" align="absmiddle">
             </div>
-            <div class="login" align="left">
-                <div style='margin: 10px;'>
-                    <img src="{% static "login.png" %}" align="absmiddle">
-                </div>
-                <div align="center">
-                    <form method="post" action="/login/validate/">{% csrf_token %}
-                        <input type="text" name="username" 
-                            value="" placeholder="Nombre"><br>
-                        <input type="password" name="password" 
-                            value="" placeholder="Clave"><br>
-                        <input type="submit" name="submit" value="Ingresar"><br>
-                        {% if message %}
-                            <p class="error">{{ message }}</p>
-                        {% endif %}
-                        <p class="recupero">
-                        <a href="/recover_password/">No puedo ingresar, recuperar la clave.</a></p>
-                    </form>
-                    <div align="left">
-                    <p class="acceso">Usuario de testing.</p>
-                    <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; usuario: invitado<br>
-                    <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clave: invitado</p>
-                    </div>
-                </div>
+            <div> -->
+
+
+    <form class="form-horizontal" role="form" method="post" action="/login/validate/" style="max-width:75%">
+    {% csrf_token %}
+        <div class="form-group">
+            <label for="user" class="col-sm-2 control-label">User</label>
+            <div class="col-sm-10">
+                <input type="input" class="form-control" id="user" placeholder="user" required>
             </div>
-            
         </div>
-    </body>
-</html>
+        <div class="form-group">
+            <label for="password" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" name="submit" class="btn btn-primary btn-lg">Ingresar</button>
+            </div>
+        </div>
+      <p class="text-center"><a href="/recover_password/">No puedo ingresar, recuperar clave.</a></p>
+    </form>
+
+
+
+
+<!--
+                <div align="left">
+                <p class="acceso">Usuario de testing.</p>
+                <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; usuario: invitado<br>
+                <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clave: invitado</p>
+                </div>
+            </div>
+        </div> -->
+{% endblock %}
