in bootstrap, out manual css

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,13 @@
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
+        <style>
+            @import url(https://fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
+            body,.body{
+                background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png') no-repeat center center fixed;
+                background-color:transparent;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;-ms-background-size:cover;background-size:cover
+            }
+        </style>
     </head>
 <body>
 
