in bootstrap, out manual css

--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" name="submit" class="btn btn-primary btn-lg">Ingresar</button>
+                <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Ingresar</button>
             </div>
         </div>
       <p class="text-center"><a href="/recover_password/">No puedo ingresar, recuperar clave.</a></p>
