Se cambia el acceso para admin Se soluciona la validacion del login Se soluciona el acceso a Agenda.

--- a/templates/index_developers.html
+++ b/templates/index_developers.html
@@ -32,38 +32,38 @@
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Pablo Petenello
+                    height="100px"><br>Pablo Petenello<br>--
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Diego Requejo
+                    height="100px"><br>Diego Requejo<br>--
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Maria Gabriela P&eacute;rez
+                    height="100px"><br>Maria Gabriela P&eacute;rez<br>--
             </td>
             </tr>
             <!-- linea 2 -->
             <tr>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Will Santana
+                    height="100px"><br>Will Santana<br>--
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Jorge Eduardo Gomez
+                    height="100px"><br>Jorge Eduardo Gomez<br>--
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>Gaston Robledo
+                    height="100px"><br>Gaston Robledo<br>--
             </td align="center">
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>
+                    height="100px"><br>--<br>--
             </td>
             <td align="center">
                 <img src="{% static "developers/no_image.png" %}" 
-                    height="100px"><br>
+                    height="100px"><br>--<br>--
             </td>
             </tr>
         </table>
