--- a/templates/login.html
+++ b/templates/login.html
@@ -26,18 +26,22 @@
             <div> -->
 
 
-    <form class="form-horizontal" role="form" method="post" action="/login/validate/" style="max-width:75%">
-    {% csrf_token %}
+    <form class="form-horizontal" role="form" method="post" 
+        action="/validate/" style="max-width:75%">{% csrf_token %}
         <div class="form-group">
             <label for="user" class="col-sm-2 control-label">User</label>
             <div class="col-sm-10">
-                <input type="input" class="form-control" id="user" placeholder="user" required>
+                <input type="input" class="form-control" 
+                    name="user" id="user" 
+                    placeholder="user" required>
             </div>
         </div>
         <div class="form-group">
             <label for="password" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                <input type="password" class="form-control" 
+                    name="password" id="password" 
+                    placeholder="Password" required>
             </div>
         </div>
         <div class="form-group">
