add bootstrap glypicons

--- a/templates/index_developers.html
+++ b/templates/index_developers.html
@@ -7,7 +7,7 @@
 
 
 {% block datos %}
-    <table width='99%' class="text-center">
+    <table width='99%' class="text-center table-bordered">
         <tr>
             <td>
                 <img src="{% static "developers/marcelo_python.png" %}" height=100px>
