add bootstrap glypicons

--- a/templates/index_developers.html
+++ b/templates/index_developers.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block title %} Developers {% endblock %}
+{% block titulo %} Developers {% endblock %}
 
 
 {% block datos %}
