--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -3,22 +3,22 @@
 {% load staticfiles %}
 {% block titulo %}Agenda{% endblock %}
 
+
 {% block botones %}
-        <form method="post" action="/agenda/search_agenda/"
-            style="float:left; width: 80%; margin:10px;">{% csrf_token %}
-            <input type=search results=5 name=s 
-                style='height: 30px; width:200px;'
+        <form method=post action="/agenda/search_agenda/"
+            style="float:left; width:80%; margin:10px">{% csrf_token %}
+            <input type=search results=5 name=s
+                style='height:30px; width:200px'
                 title="Busqueda de datos">
         </form>
-        <form method="post" action="/agenda/append_agenda/" margin=0>{% csrf_token %}
-            <button type="submit">
-                <input type="hidden" name="id" value="none">
-                <img src="{% static "add_list.png" %}" 
-                    width="30px" border=0
-                    title="Alta de datos">
+        <form method=post action="/agenda/append_agenda/" margin=0>
+            <button type=submit class="btn btn-lg btn-success">
+                <input type=hidden name=id value=none>
+                <span class="glyphicon glyphicon-edit" title="Alta de datos" style="font-size:30px"></span>
             </button>
         </form>
 {% endblock %}
+
 
 {% block datos %}
 <table>
@@ -27,23 +27,23 @@
         <td>
             <div class='info'>
                 <div class="more" align="right">
-                    <img src="{% static "more_property.png" %}" 
+                    <img src="{% static "more_property.png" %}"
                         width="15px"
                         onclick="showDiv({{ post.pk }})"
                         title="...mas acciones">
-                    <div id="welcomeDiv{{ post.pk }}" 
+                    <div id="welcomeDiv{{ post.pk }}"
                         class="divMore" align="left">
-                        <form method="post" action="/agenda/delete_agenda/" margin=0 style="float:left;">{% csrf_token %}
+                        <form method="post" action="/agenda/delete_agenda/" margin=0 style="float:left;">
                             <input type="hidden" name="id" value="{{ post.pk }}">
                             <button type="submit">
-                                <img src="{% static "delete_property.png" %}" 
+                                <img src="{% static "delete_property.png" %}"
                                 width="20px" border=0 title="Borrar datos">
                             </button>
                         </form>
-                        <form method="post" action="/agenda/append_agenda/" margin=0>{% csrf_token %}
+                        <form method="post" action="/agenda/append_agenda/" margin=0>
                             <input type="hidden" name="id" value="{{ post.pk }}">
                             <button type="submit">
-                                <img src="{% static "edit_property.png" %}" 
+                                <img src="{% static "edit_property.png" %}"
                                 width="20px" border=0 title="Edicion de datos">
                             </button>
                         </form>
@@ -51,19 +51,19 @@
                 </div>
                 <table>
                 <tr><td>
-		        <span style='margin:10px'>{{ post.razonNombreApellido }}</span><br>
-		        <span style='margin:30px;'>{{ post.calle }}, {{ post.numero}} {{ post.piso}}</span><br>
-		        <span style='margin:30px;'>{{ post.ciudad }}, {{ post.provincia}}</span><br>
-		        <span style='margin:30px;'>{{ post.pais }}</span>
-		        </td><td>
-		        <span style='margin:30px;'>{{ post.telefono1 }}</span><br>
-		        <span style='margin:30px;'>{{ post.telefono2 }}</span><br>
-		        <span style='margin:30px;'>{{ post.telefono3 }}</span><br>
-		        <span style='margin:30px;'>{{ post.telefono4 }}</span><br>
-		        </td>
-		        </table>
-	        </div>
-	        <br>
+                <span style='margin:10px'>{{ post.razonNombreApellido }}</span><br>
+                <span style='margin:30px;'>{{ post.calle }}, {{ post.numero}} {{ post.piso}}</span><br>
+                <span style='margin:30px;'>{{ post.ciudad }}, {{ post.provincia}}</span><br>
+                <span style='margin:30px;'>{{ post.pais }}</span>
+                </td><td>
+                <span style='margin:30px;'>{{ post.telefono1 }}</span><br>
+                <span style='margin:30px;'>{{ post.telefono2 }}</span><br>
+                <span style='margin:30px;'>{{ post.telefono3 }}</span><br>
+                <span style='margin:30px;'>{{ post.telefono4 }}</span><br>
+                </td>
+                </table>
+            </div>
+            <br>
         </td>
     <tr>
 {% endfor %}
