--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -6,7 +6,7 @@
 
 {% block botones %}
         <form method=post action="/agenda/search_agenda/"
-            style="float:left; width:80%; margin:10px">{% csrf_token %}
+            style="float:left; width:80%; margin:10px">
             <input type=search results=5 name=s
                 style='height:30px; width:200px'
                 title="Busqueda de datos">
