--- a/templates/search_agenda.html
+++ b/templates/search_agenda.html
@@ -4,55 +4,47 @@
 {% block titulo %}Agenda - Busqueda{% endblock %}
 
 {% block botones %}
-            <form method="post" action="/agenda/search_agenda/"
-                style="float:left; width: 80%; margin:10px;">{% csrf_token %}
-                <input type=search results=5 name=s 
-                    style='height: 30px; width:200px;'>
-            </form>
-            <form method="post" action="/agenda/append_agenda/" margin=0>{% csrf_token %}
-                <button type="button" onclick="javascript:window.location =('/agenda/')">
-                   <img src="{% static "back.png" %}" 
-                    width="30px" border=0
-                    title="Pantalla anterior">
-               </button>
-                <button type="submit">
-                    <img src="{% static "add_list.png" %}" 
-                        width="30px" border=0
-                        title="Alta de datos">
-                </button>
-            </form>
+    <form method=post action="/agenda/search_agenda/">
+        <input type=search results=5 name=s>
+    </form>
+    <form method=post action="/agenda/append_agenda/">
+        <button type=button onclick="window.location=('/agenda/')" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-arrow-left" title="Pantalla anterior" style="font-size:30px"></span>
+        </button>
+        <button type=submit class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-edit" title="Alta de datos" style="font-size:30px"></span>
+        </button>
+    </form>
 {% endblock %}
 
 {% block datos %}
-        {% if error_message %}
-            <div class="divError">
-                    {{ error_message }}
-            </div>
-        {% else %}
-        <table>
-            <tr>
-                <td>
-                    <div class='info'>
-                        <div class="more" align="right">
-                            <img src="{% static "more_property.png" %}" width="15px">
-                        </div>
-                        <table>
-                        <tr><td>
-                        <span style='margin:10px'>{{ posts.razonNombreApellido }}</span><br>
-                        <span style='margin:30px;'>{{ posts.calle }}, {{ posts.numero}} {{ posts.piso}}</span><br>
-                        <span style='margin:30px;'>{{ posts.ciudad }}, {{ posts.provincia}}</span><br>
-                        <span style='margin:30px;'>{{ posts.pais }}</span>
-                        </td><td>
-                        <span style='margin:30px;'>{{ posts.telefono1 }}</span><br>
-                        <span style='margin:30px;'>{{ posts.telefono2 }}</span><br>
-                        <span style='margin:30px;'>{{ posts.telefono3 }}</span><br>
-                        <span style='margin:30px;'>{{ posts.telefono4 }}</span><br>
-                        </td>
-                        </table>
+    {% if error_message %}
+        <div class="alert alert-danger text-center"><b>{{ error_message }}</b></div>
+    {% else %}
+    <table>
+        <tr>
+            <td>
+                <div class='info'>
+                    <div class="more" align="right">
+                        <img src="{% static "more_property.png" %}" width="15px">
                     </div>
-                    <br>
-                </td>
-            <tr>
-        </table>
-        {% endif %}
+                    <table>
+                    <tr><td>
+                    <span style='margin:10px'>{{ posts.razonNombreApellido }}</span><br>
+                    <span style='margin:30px;'>{{ posts.calle }}, {{ posts.numero}} {{ posts.piso}}</span><br>
+                    <span style='margin:30px;'>{{ posts.ciudad }}, {{ posts.provincia}}</span><br>
+                    <span style='margin:30px;'>{{ posts.pais }}</span>
+                    </td><td>
+                    <span style='margin:30px;'>{{ posts.telefono1 }}</span><br>
+                    <span style='margin:30px;'>{{ posts.telefono2 }}</span><br>
+                    <span style='margin:30px;'>{{ posts.telefono3 }}</span><br>
+                    <span style='margin:30px;'>{{ posts.telefono4 }}</span><br>
+                    </td>
+                    </table>
+                </div>
+                <br>
+            </td>
+        <tr>
+    </table>
+    {% endif %}
 {% endblock %}
