--- a/templates/login.html
+++ b/templates/login.html
@@ -2,75 +2,127 @@
 <!DOCTYPE HTML>
 {% load staticfiles %}
 <html>
-    <head>
-        <title>Login</title>
-        <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
-        <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
-        <style>
+  <head>
+    <title>Bootstrap 101 Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
+    <style>
             @import url(https://fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
             body,.body{
                 background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png') no-repeat center center fixed;
                 background-color:transparent;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;-ms-background-size:cover;background-size:cover
             }
         </style>
-        <link rel="stylesheet" type="text/css" href="{% static "styles.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "others.css" %}">
-        <script src="{% static "html5aux.js" %}"></script>
-        
-    </head>
-    <body>
-    <div>
-        <div class="pie" align='center' align=>
-            <img src="{% static "apache-icon.png" %}" width="100px" align="absmiddle">
-            <img src="{% static "djangologo.png" %}" width="100px" align="absmiddle">
-            <span style='margin:20px;'>by marcelo.martinovic@gmail.com</span>
-            <img src="{% static "Raspi_Colour_R.png" %}" height="50px" align="absmiddle">
-            <img src="{% static "HTML5_Logo_256.png" %}" height="50px" align="absmiddle">
-        </div>
-        <div class="imagenDiv">
-            <img src="{% static "pantalla_login.png" %}"
-            width='550px' align="absmiddle">
-        </div>
-            <div class="login" align="left">
-                <div style='margin: 10px;'>
-                    <img src="{% static "login.png" %}" align="absmiddle">
-                </div>
-                <div>
-                    <form class="form-horizontal" role="form" method="post" 
+    <style>
+
+      /* Sticky footer styles
+      -------------------------------------------------- */
+
+      html,
+      body {
+        height: 99%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+
+
+
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+
+      .container {
+        width: auto;
+        max-width: 680px;
+      }
+      .container .credit {
+        margin: 20px 0;
+      }
+
+     .cuerpo {
+        margin-top: 20px;
+        height: 450px;
+        right: 20px;
+     }
+     
+     a {
+        font-size: 22px;
+        line-height: 24px;
+     }
+
+    </style>
+  </head>
+  <body>
+    <!-- Part 1: Wrap all page content here -->
+    <div id="wrap">
+
+        <div class="row-fluid">
+            <div class="span8 cuerpo">
+              &nbsp;
+            </div>
+            
+            <div class="span3 hero-unit cuerpo">
+              <form class="form-horizontal" role="form" method="post" 
                         action="/validate/" style="max-width:75%">{% csrf_token %}
-                        <div class="form-group">
-                            <label for="user" class="col-sm-2 control-label">User</label>
-                            <div class="col-sm-10">
-                                <input type="input" class="form-control" 
-                                    name="user" id="user" 
-                                    placeholder="user" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="col-sm-2 control-label">Password</label>
-                            <div class="col-sm-10">
-                                <input type="password" class="form-control" 
-                                    name="password" id="password" 
-                                    placeholder="Password" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" name="submit" class="btn btn-primary btn-lg btn-block">Ingresar</button>
-                            </div>
-                        </div>
-                      <p class="text-center"><a href="/recover_password/">No puedo ingresar, recuperar clave.</a></p>
-                    </form>
-                    <!--
-                    <div align="left">
-                    <p class="acceso">Usuario de testing.</p>
-                    <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; usuario: invitado<br>
-                    <p class="acceso">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clave: invitado</p>
-                    </div>
-                    </div-->
-                </div> 
+                <fieldset>
+                    <legend>Login</legend>
+                    <label>Usuario</label>
+                    <input type="text" value="" name="user" 
+                        placeholder="Nombre">
+                    <label>Clave</label>
+                    <input type="password" value="" name="password" 
+                        placeholder="Clave">
+                    <br>
+                    <button type="submit" class="btn btn-primary">Validar</button>
+                    <button type="reset" class="btn">Cancelar</button>
+                </fieldset>
+              </form>
             </div>
         </div>
-    </body>
+      
+    </div>
+
+    <div id="footer">
+      <div class="container">
+        <p>
+            <img src="{% static "apache-icon.png" %}" width="100px" align="absmiddle">
+            &nbsp;&nbsp;
+            <img src="{% static "djangologo.png" %}" width="100px" align="absmiddle">
+            <span style='margin:20px;'><a href="/developers/">Desarrolladores
+                        que participan</a></span>
+            <img src="{% static "Raspi_Colour_R.png" %}" width="40px" align="absmiddle">
+            &nbsp;&nbsp;
+            <img src="{% static "HTML5_Logo_256.png" %}" width="40px" align="absmiddle">
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
