--- a/static/styles.css
+++ b/static/styles.css
@@ -61,7 +61,7 @@ h2.titulo{
 .datos{
     position: relative;
     top:80px;
-    overflow-y: scroll; 
+    overflow-y: scroll;
     height:400px;
 }
 
@@ -73,19 +73,19 @@ h2.titulo{
 .inputData{
     position: absolute;
     top:80px;
-    overflow-y: scroll; 
+    overflow-y: scroll;
     height:400px;
 }
 
 .more{
-    position: absolute; 
-    top:0px; 
+    position: absolute;
+    top:0px;
     width:100%;
 }
 
 .pie{
-    position: absolute; 
-    bottom:2px; 
+    position: absolute;
+    bottom:2px;
     width:100%;
     color: #FFFFFF;
     background-color: #103E2E;
@@ -135,3 +135,8 @@ h2.titulo{
     align: left;
     left: 100px;
 }
+
+.footer{
+    position: absolute;
+    bottom: -150px;
+    }
