--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <head>
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
+        <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
+
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
         <style>
             @import url(https://fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
@@ -16,32 +18,59 @@
             }
         </style>
 
+        <style>
+        body { font-size: 16px; }
+        label { font-size: 18px; }
+        .input-large {
+            height: 44px !important;
+            font-size: 18px !important;
+        }
+
+        .footer{
+            position: absolute;
+            width: 100%;
+            bottom: 0px;
+        }
+        </style>
+
     </head>
-<body>
+    <body>
 
 
-<h1 class="text-center">{% block titulo %}{% endblock %}</h1>
+        <h1 class="text-center">{% block titulo %}{% endblock %}</h1>
 
 
-<div class='botonera'>
-    {% block botones %}{% endblock %}
-</div>
+        <div class='botonera'>
+            {% block botones %}{% endblock %}
+        </div>
 
-<div class='datos'>
-    {% block datos %}{% endblock %}
-</div>
-
-
-<div class="footer panel-footer text-center">
-    <img src="{% static "apache-icon.png" %}" width=100px/>
-    <img src="{% static "djangologo.png" %}" width=100px/>
-    <span> by marcelo.martinovic@gmail.com </span>
-    <img src="{% static "Raspi_Colour_R.png" %}" height=50px/>
-    <img src="{% static "HTML5_Logo_256.png" %}" height=50px/>
-</div>
+        <div class='datos'>
+            {% block datos %}{% endblock %}
+        </div>
 
 
-</body>
+        <div class="footer panel-footer text-center">
+            <div>
+                <div class="span3">
+                    <img src="{% static "apache-icon.png" %}" width=100px/>
+                </div>
+                <div class="span3">
+                    <img src="{% static "djangologo.png" %}" width=100px/>
+                </div>
+                <div class="span3">
+                    <a href='/developers/'><em>Desarrolladores participantes</em></a>
+                </div>
+                <div class="span3">
+                    <img src="{% static "Raspi_Colour_R.png" %}" width=50px/>
+                </div>
+                <div class="span3">
+                    <img src="{% static "HTML5_Logo_256.png" %}" width=50px/>
+                </div>
+            </div>
+        </div>
+
+
+    </body>
 </html>
 
 {% endspaceless %}
