--- a/templates/login.html
+++ b/templates/login.html
@@ -1,128 +1,41 @@
+{% extends "base.html" %}
 {% load url from future %}
-<!DOCTYPE HTML>
 {% load staticfiles %}
-<html>
-  <head>
-    <title>Bootstrap 101 Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
-    <style>
-            @import url(https://fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
-            body,.body{
-                background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png') no-repeat center center fixed;
-                background-color:transparent;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;-ms-background-size:cover;background-size:cover
-            }
-        </style>
-    <style>
 
-      /* Sticky footer styles
-      -------------------------------------------------- */
-
-      html,
-      body {
-        height: 99%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f5f5f5;
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
-      }
-
-
-
-      /* Custom page CSS
-      -------------------------------------------------- */
-      /* Not required for template or sticky footer method. */
-
-      .container {
-        width: auto;
-        max-width: 680px;
-      }
-      .container .credit {
-        margin: 20px 0;
-      }
-
-     .cuerpo {
-        margin-top: 20px;
-        height: 450px;
-        right: 20px;
-     }
-     
-     a {
-        font-size: 22px;
-        line-height: 24px;
-     }
-
-    </style>
-  </head>
-  <body>
-    <!-- Part 1: Wrap all page content here -->
-    <div id="wrap">
-
+{% block datos %}
+        <div class="row-fluid">&nbsp;</div>
         <div class="row-fluid">
-            <div class="span8 cuerpo">
-              &nbsp;
-            </div>
-            
-            <div class="span3 hero-unit cuerpo">
-              <form class="form-horizontal" role="form" method="post" 
-                        action="/validate/" style="max-width:75%">{% csrf_token %}
-                <fieldset>
-                    <legend>Login</legend>
-                    <label>Usuario</label>
-                    <input type="text" value="" name="user" 
-                        placeholder="Nombre">
-                    <label>Clave</label>
-                    <input type="password" value="" name="password" 
-                        placeholder="Clave">
-                    <br>
-                    <button type="submit" class="btn btn-primary">Validar</button>
-                    <button type="reset" class="btn">Cancelar</button>
-                </fieldset>
-              </form>
+            <div class="span12">
+
+                <div class="span8 cuerpo">
+                  &nbsp;
+                </div>
+
+                <div class="span3 hero-unit cuerpo">
+                  <form class="form-vertical" role="form" method="post"
+                            action="/validate/" style="max-width:75%">{% csrf_token %}
+                    <fieldset>
+                        <legend>Login</legend>
+                        <label>Usuario</label>
+                        <input type="text" value="" name="user"
+                            class="input-large"
+                            placeholder="Nombre">
+                        <label>Clave</label>
+                        <input type="password" value=""
+                            name="password"
+                            class="input-large"
+                            placeholder="Clave">
+                        <div class="text-center">
+                            <br><br>
+                            <button type="submit" class="btn btn-primary">Validar</button>
+                            &nbsp;
+                            <button type="reset" class="btn">Cancelar</button>
+                        </div>
+                    </fieldset>
+                  </form>
+                </div>
             </div>
         </div>
-      
-    </div>
 
-    <div id="footer">
-      <div class="container">
-        <p>
-            <img src="{% static "apache-icon.png" %}" width="100px" align="absmiddle">
-            &nbsp;&nbsp;
-            <img src="{% static "djangologo.png" %}" width="100px" align="absmiddle">
-            <span style='margin:20px;'><a href="/developers/">Desarrolladores
-                        que participan</a></span>
-            <img src="{% static "Raspi_Colour_R.png" %}" width="40px" align="absmiddle">
-            &nbsp;&nbsp;
-            <img src="{% static "HTML5_Logo_256.png" %}" width="40px" align="absmiddle">
-        </p>
-      </div>
     </div>
-  </body>
-</html>
+{% endblock %}
