Se agrega menu y logout

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
     </head>
     <body>
-
+        {% block menu%}{% endblock %}
 
         <h1 class="text-center">{% block titulo %}{% endblock %}</h1>
 
