Se agrega menu y logout

--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -2,8 +2,8 @@
 {% load url from future %}
 {% load staticfiles %}
 {% block menu %}
-<div class="navbar">
-    <div class="navbar-inner">
+<div class="navbar" role="navegation">
+    <div class="navbar-inner"  role="navegation">
         <a class="brand" href="#">Opciones</a>
         <ul class="nav">
             <li class="active"><a href="#">Principal</a></li>
