bootstrap navbar and login

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,12 @@
             <form class="navbar-form navbar-left" role=search>
                 <div class="form-group input-group-sm">
                     <input type=search class="form-control" placeholder=Buscar>
+                </div>
+                <button type=submit class="btn btn-sm">Busca</button>
+            </form>
+          </div>
+        </div>
+    </div>
 
 
       {# page content #}
