bootstrap navbar and login

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                 <div class="form-group input-group-sm">
                     <input type=search class="form-control" placeholder=Buscar>
                 </div>
-                <button type=submit class="btn btn-sm">Busca</button>
+                <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
             </form>
           </div>
         </div>
