bootstrap navbar and login

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
                 </div>
                 <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
             </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout/"><button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
+            </ul>
           </div>
         </div>
     </div>
