--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 {% spaceless %}
 <html>
     <head>
+        <meta charset="utf-8"/><title>.</title>
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
         <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen"> -->
