--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -2,22 +2,37 @@
 {% load url from future %}
 {% load staticfiles %}
 {% block menu %}
-<div class="navbar" role="navegation">
-    <div class="navbar-inner"  role="navegation">
-        <a class="brand" href="#">Opciones</a>
-        <ul class="nav">
-            <li class="active"><a href="#">Principal</a></li>
-            <li><a href="#">Agenda</a></li>
-            <li><a href="#">Stock</a></li>
-        </ul>
-        <ul class="nav pull-right">
-            <li><a href="/logout/"><span class="glyphicon glyphicon-th"> Logout</span></a></li>
-        </ul>
-    </div>
-</div>
-{% endblock %}
-{% block titulo %}Agenda{% endblock %}
+    <div class=wrap id=wrap>
 
+
+      {# Fixed navbar  #}
+      <div class="navbar-sm navbar-inverse navbar-fixed-top" role=navigation>
+        <div class=container>
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/"><b>Django</b></a>
+          </div>
+            <ul class="nav navbar-nav">
+                <li class=active><a href="#">Principal</a>
+                <li><a href="/agenda">Agenda</a>
+                <li><a href="#">blah</a>
+                <li><a href="#">blah</a>
+                <li><a href="#">blah</a>
+            </ul>
+            <form class="navbar-form navbar-left" role=search>
+                <div class="form-group input-group-sm">
+                    <input type=search class="form-control" placeholder=Buscar>
+                </div>
+                <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout/"><button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
+            </ul>
+          </div>
+        </div>
+    </div-->
+{% endblock %}
+
+{% block titulo %}Agenda{% endblock %}
 
 {% block botones %}
         <form method=post action="/agenda/search_agenda/"
@@ -33,7 +48,6 @@
             </button>
         </form>
 {% endblock %}
-
 
 {% block datos %}
 <table>
