--- a/templates/base.html
+++ b/templates/base.html
@@ -54,15 +54,15 @@
         style="max-height:75px;position:absolute;bottom:0;width:100%">
       <div class="container">
           <div class=row>
-            <div class="col-md-2"><img src="{% static "apache-icon.png" %}" width=75px/>
+            <div class="col-md-2"><img src="{% static "img/apache-icon.png" %}" width=75px/>
             </div>
-            <div class="col-md-2"><img src="{% static "djangologo.png" %}" width=75px/>
+            <div class="col-md-2"><img src="{% static "img/djangologo.png" %}" width=75px/>
             </div>
             <div class="col-md-2"><a href='/developers' class=credit>Desarrolladores</a>
             </div>
-            <div class="col-md-2"><img src="{% static "Raspi_Colour_R.png" %}" width=40px/>
+            <div class="col-md-2"><img src="{% static "img/Raspi_Colour_R.png" %}" width=40px/>
             </div>
-            <div class="col-md-2"><img src="{% static "HTML5_Logo_256.png" %}" width=50px/>
+            <div class="col-md-2"><img src="{% static "img/HTML5_Logo_256.png" %}" width=50px/>
             </div>
         </div>
       </div>
