--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -14,9 +14,17 @@
             <ul class="nav navbar-nav">
                 <li class=active><a href="#">Principal</a>
                 <li><a href="/agenda">Agenda</a>
-                <li><a href="#">blah</a>
-                <li><a href="#">blah</a>
-                <li><a href="#">blah</a>
+                <li class=dropdown>
+                    <a href="#" class="dropdown-toggle"
+                        data-toggle="dropdown">Productos<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Stock real</a></li>
+                          <li><a href="#">Categorias</a></li>
+                          <li><a href="#">Historico</a></li>
+                        </ul>
+                </li>
+                <li><a href="/agenda">Compras</a>
+                <li><a href="/agenda">Ventas</a>
             </ul>
             <form class="navbar-form navbar-left" role=search>
                 <div class="form-group input-group-sm">
