--- a/templates/search_agenda.html
+++ b/templates/search_agenda.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load url from future %}
 {% load staticfiles %}
+
+{% block menu %}{% include "menu.html" %}{% endblock %}
+
 {% block titulo %}Agenda - Busqueda{% endblock %}
 
 {% block botones %}
