--- a/templates/index_agenda.html
+++ b/templates/index_agenda.html
@@ -1,44 +1,8 @@
 {% extends "base.html" %}
 {% load url from future %}
 {% load staticfiles %}
-{% block menu %}
-    <div class=wrap id=wrap>
 
-
-      {# Fixed navbar  #}
-      <div class="navbar-sm navbar-inverse navbar-fixed-top" role=navigation>
-        <div class=container>
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/"><b>Django</b></a>
-          </div>
-            <ul class="nav navbar-nav">
-                <li class=active><a href="#">Principal</a>
-                <li><a href="/agenda">Agenda</a>
-                <li class=dropdown>
-                    <a href="#" class="dropdown-toggle"
-                        data-toggle="dropdown">Productos<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="#">Stock real</a></li>
-                          <li><a href="#">Categorias</a></li>
-                          <li><a href="#">Historico</a></li>
-                        </ul>
-                </li>
-                <li><a href="/agenda">Compras</a>
-                <li><a href="/agenda">Ventas</a>
-            </ul>
-            <form class="navbar-form navbar-left" role=search>
-                <div class="form-group input-group-sm">
-                    <input type=search class="form-control" placeholder=Buscar>
-                </div>
-                <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout/"><button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
-            </ul>
-          </div>
-        </div>
-    </div-->
-{% endblock %}
+{% block menu %}{% include "menu.html" %}{% endblock %}
 
 {% block titulo %}Agenda{% endblock %}
 
@@ -63,41 +27,35 @@
     <tr>
         <td>
             <div class='info'>
-                <div class="more" align="right">
-                    <img src="{% static "more_property.png" %}"
-                        width="15px"
-                        onclick="showDiv({{ post.pk }})"
-                        title="...mas acciones">
-                    <div id="welcomeDiv{{ post.pk }}"
-                        class="divMore" align="left">
-                        <form method="post" action="/agenda/delete_agenda/" margin=0 style="float:left;">
-                            <input type="hidden" name="id" value="{{ post.pk }}">
-                            <button type="submit">
-                                <img src="{% static "delete_property.png" %}"
-                                width="20px" border=0 title="Borrar datos">
-                            </button>
-                        </form>
-                        <form method="post" action="/agenda/append_agenda/" margin=0>
-                            <input type="hidden" name="id" value="{{ post.pk }}">
-                            <button type="submit">
-                                <img src="{% static "edit_property.png" %}"
-                                width="20px" border=0 title="Edicion de datos">
-                            </button>
-                        </form>
-                    </div>
-                </div>
+                <form method="post" action="/agenda/delete_agenda/" margin=0 style="float:left;">
+                    <input type="hidden" name="id" value="{{ post.pk }}">
+                    <button type="submit">
+                        <span class="glyphicon glyphicon-minus-sign"
+                            title="Borrado de datos"></span>
+                    </button>
+                </form>
+                <form method="post" action="/agenda/append_agenda/" margin=0>
+                    <input type="hidden" name="id" value="{{ post.pk }}">
+                    <button type="submit">
+                        <span class="glyphicon glyphicon-pencil"
+                            title="Modificacion de datos"></span>
+                    </button>
+                </form>
                 <table>
-                <tr><td>
-                <span style='margin:10px'>{{ post.razonNombreApellido }}</span><br>
-                <span style='margin:30px;'>{{ post.calle }}, {{ post.numero}} {{ post.piso}}</span><br>
-                <span style='margin:30px;'>{{ post.ciudad }}, {{ post.provincia}}</span><br>
-                <span style='margin:30px;'>{{ post.pais }}</span>
-                </td><td>
-                <span style='margin:30px;'>{{ post.telefono1 }}</span><br>
-                <span style='margin:30px;'>{{ post.telefono2 }}</span><br>
-                <span style='margin:30px;'>{{ post.telefono3 }}</span><br>
-                <span style='margin:30px;'>{{ post.telefono4 }}</span><br>
-                </td>
+                    <tr>
+                        <td>
+                            <span style='margin:10px'>{{ post.razonNombreApellido }}</span><br>
+                            <span style='margin:30px;'>{{ post.calle }}, {{ post.numero}} {{ post.piso}}</span><br>
+                            <span style='margin:30px;'>{{ post.ciudad }}, {{ post.provincia}}</span><br>
+                            <span style='margin:30px;'>{{ post.pais }}</span>
+                        </td>
+                        <td>
+                            <span style='margin:30px;'>{{ post.telefono1 }}</span><br>
+                            <span style='margin:30px;'>{{ post.telefono2 }}</span><br>
+                            <span style='margin:30px;'>{{ post.telefono3 }}</span><br>
+                            <span style='margin:30px;'>{{ post.telefono4 }}</span><br>
+                        </td>
+                    </tr>
                 </table>
             </div>
             <br>
